# VectorWay

./: .gitignore  CMakeLists.txt  LICENSE  ListOfAlgorithms.txt  README.md
examples/: example1.cpp
include/: library.h
include/vectorway/: library.h  open_street_maps.h
src/: library.cpp  open_street_maps.cpp
tests/: test1.cpp
